--- a/src/client/components/resume.html
+++ b/src/client/components/resume.html
@@ -56,8 +56,9 @@
   </div>
 </div>
 
+<div id="techSkills"></div>
 <div class="techSkills">
-  <div id="techSkills" class="row">
+  <div class="row">
     <div class="col-md-12 skills-title">
       <h3>Technical Skills</h3>
       <div class="divider">
