--- a/src/client/components/resume.html
+++ b/src/client/components/resume.html
@@ -24,7 +24,7 @@
       <div class="divider">
         <hr>
       </div>
-      <p>Software Developer for BrieBug Software, Inc. developing AngularJS applications with heavy JavaScript for client centric experiences.</p>
+      <p>Software Developer for Briebug Software, Inc. developing AngularJS applications with heavy JavaScript for client centric experiences.</p>
     </div>
   </div>
 </div>
