--- a/src/client/components/resume.html
+++ b/src/client/components/resume.html
@@ -9,7 +9,7 @@
             />
             <br>
             <p><a href="tel:+17204152768">720.415.2768</a>
-                <br>anthonyjones0519@gmail.com
+                <br><a href="mailto:anthonyjones0519@gmail.com">anthonyjones0519@gmail.com</a>
                 <br>Denver, CO</p>
             <a href="https://www.linkedin.com/in/anthonymjones519"><i class="fa fa-2x fa-linkedin"></i></a> &nbsp;
             <a href="https://github.com/anthonymjones"><i class="fa fa-2x fa-github"></i></a>
