Edited current position description

--- a/src/client/components/resume.html
+++ b/src/client/components/resume.html
@@ -25,8 +25,8 @@
             <div class="divider">
                 <hr>
             </div>
-            <p>Software Developer for Briebug Software, Inc. developing AngularJS applications with heavy JavaScript for client
-                centric experiences.</p>
+            <p>Software Developer for Briebug Software, Inc. developing full stack MEAN 
+                applications with heavy JavaScript for client centric experiences.</p>
         </div>
     </div>
 </div>
