Added positions to prof exp

--- a/src/client/components/resume.html
+++ b/src/client/components/resume.html
@@ -124,7 +124,7 @@
                     <div class="panel-heading" role="tab" id="heading{{$index}}">
                         <h4 class="panel-title">
         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{$index}}" aria-expanded="true" aria-controls="collapse{{index}}">
-          <h4>{{pe.company}} <br><small>({{pe.dates}}) <span class="pull-right">{{pe.location}}</span></small></h4>
+          <h4>{{pe.position}} <br><small>{{pe.company}} <br>({{pe.dates}}) <span class="pull-right">{{pe.location}}</span></small></h4>
                         </a>
                         </h4>
                     </div>
