--- a/src/client/components/resume.html
+++ b/src/client/components/resume.html
@@ -18,15 +18,14 @@
     </div>
 </div>
 
-<div id="currentPos" class="row">
+<div id="summary" class="row">
     <div class="col-md-12">
-        <div class="current-pos">
-            <h3>Current Position</h3>
+        <div class="summary">
+            <h3>Summary</h3>
             <div class="divider">
                 <hr>
             </div>
-            <p>Software Developer for Briebug Software, Inc. developing full stack MEAN 
-                applications with heavy JavaScript for client centric experiences.</p>
+            <p>Software engineer working primarily in MEAN stack, highly focused on industry best practices and adapting to new technologies. Experienced leader in Agile methodologies, working in teams and individually to deliver exceptional products. Motivated by an innate curiosity and desire to learn, create, and solve problems.</p>
         </div>
     </div>
 </div>
