fixed navbar dropdown-menu highlighting

--- a/src/client/components/navBar.html
+++ b/src/client/components/navBar.html
@@ -20,9 +20,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Technical Skills <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#techSkills">Programming Languages</a></li>
-                            <li><a href="#techSkills">DB Tools</a></li>
-                            <li><a href="#techSkills">Web Development</a></li>
+                            <li class="dropdown-menu-item"><a href="#techSkills">Programming Languages</a></li>
+                            <li class="dropdown-menu-item"><a href="#techSkills">DB Tools</a></li>
+                            <li class="dropdown-menu-item"><a href="#techSkills">Web Development</a></li>
                         </ul>
                     </li>
                     <li><a href="#profExp">Professional Experience</a></li>
